--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 KENTIK_URL=api.kentik.com/api/v5
-KENTIK_HARPERDB_URL=http://harperdb:9925
+KENTIK_HARPERDB_URL=http://harperdb_1:9925
 KENTIK_HARPERDB_SCHEMA=Kentik_Local
 KENTIK_HARPERDB_TABLE=Interface_Utlization
 KENTIK_QUERY_TIME_INCROMENT=day
